# ESE615-Autonomous-Racing

./: .gitignore
lab1_ws/.devcontainer/: devcontainer.json
lab1_ws/src/: .gitignore  Dockerfile  README.md  SUBMISSION.md
lab1_ws/src/lab1_pkg/: CMakeLists.txt  package.xml
lab1_ws/src/lab1_pkg/launch/: cpp_nodes_launch.py  py_nodes_launch.py
lab1_ws/src/lab1_pkg/scripts/: relay_py.py  talker_py.py
lab1_ws/src/lab1_pkg/src/: relay.cpp  talker.cpp
lab2_ws/.devcontainer/: devcontainer.json
lab2_ws/src/: .dockerignore  Dockerfile  README.md  SUBMISSION.md
lab2_ws/src/safety_node/: CMakeLists.txt
lab2_ws/src/safety_node/launch/: safty_node_launch.py
lab2_ws/src/safety_node/scripts/: safety_node.py
lab2_ws/src/safety_node/src/: safety_node.cpp
lab3_ws/src/: .gitignore  README.md  SUBMISSION.md
lab3_ws/src/wall_follow/: CMakeLists.txt
lab3_ws/src/wall_follow/launch/: wall_follow_launch.py
lab3_ws/src/wall_follow/src/: wall_follow_node.cpp
lab4_ws/src/: .dockerignore  README.md  SUBMISSION.md
lab4_ws/src/gap_follow/scripts/: reactive_node.py
lab4_ws/src/gap_follow/src/: reactive_node.cpp
lab5_ws/src/: .dockerignore  .gitignore  Dockerfile  SUBMISSION.md  lab5_solution.tex
lab5_ws/src/lab5_pkg/src/: correspond.cpp  scanmatch_node.cpp  transform.cpp
lab6_ws/src/: SUBMISSION.md
lab6_ws/src/pure_pursuit/: CMakeLists.txt  package.xml
lab6_ws/src/pure_pursuit/scripts/: corner_gen.py  pure_pursuit_node.py  waypoint_logger.py
lab7_ws/src/: .gitignore  README.md  SUBMISSION.md
lab7_ws/src/lab7_pkg/: CMakeLists.txt
lab7_ws/src/lab7_pkg/include/: constant.h  motion_planner.h  rrt.h
lab7_ws/src/lab7_pkg/launch/: rrt_launch.py
lab7_ws/src/lab7_pkg/scripts/: corner_gen.py  rrt_node.py
lab7_ws/src/lab7_pkg/src/: motion_planner.cpp  rrt.cpp  (+2 more)
lab8_ws/: .gitignore  README.md  SUBMISSION.md
lab8_ws/deploy/: build.py  helper.py  infer.py  main.py
lab8_ws/yolo/: f110_yolo_hw.ipynb
